Development
    ru.po fix Issue #586
    uk.po fix Issue #585
    Fix problem with directory vs dvd detection Issue #587
    Set PACKAGE_LOCALE_DIR based on --localedir from configure
    Add option to enable or disable Nautilus plugin in Edit->Preferences [Interface] tab
    Updated German translation
    Updated Portugeuse translation
1.0.5
    Rework key handler to be more correct with respect to shift/ctrl/alt modifiers
    Only use dark theme if not embedded, otherwise use the default theme
    Prefer the dark theme when running on gnome 3.2, similar to totem
    Updated Polish translation to match the reworded source text
    Reword 50% larger as gettext is stupid about the % sign
    Translated the missing string into Polish
1.0.5b2
    Add 150% display of video
    Use icon named gnome-mplayer-panel for status icon if present in theme
    Remove configure option --with-gpm-new-method as this is default now
        if you have an old gnome-power-manager < 2.26 add the configure flag
        --with-gpm-old-method
    Try to detect the right screensaver api to use in Gnome 3.2 (Fedora 16)
    Updated German translation
    Fix warning when accelerator keys have not been set
    Updated Japanese translation
    Fix the speed multipliers and speed reset Issue 566 & 567
1.0.5b1
    Rephrased some strings in Polish translation
    Updated Portuguese translation
    Updated Polish translation
    Fix problem with visual seeking while using the tracker, requires gmtk svn r48 
    Add in command line option --vo (this disables hardware codecs as a safety measure)
    Add in command line option --dvd_device
    Fix Issue #560, ATTRIBUTE_FORCE_CACHE not being processed
    Printout gmtk version in verbose mode
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Make cursor reappear when not in fullscreen mode
    Hide mouse/panel in fullscreen mode when mouse is above the panel area.